third_party/move/move-compiler/tests/move_check/translated_ir_tests/move/commands/mixed_lvalue.exp
warning[W09003]: unused assignment
   ┌─ tests/move_check/translated_ir_tests/move/commands/mixed_lvalue.move:11:13
   │
11 │         let r_ref = &mut r;
   │             ^^^^^ Unused assignment or binding for local 'r_ref'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_r_ref')

warning[W09003]: unused assignment
   ┌─ tests/move_check/translated_ir_tests/move/commands/mixed_lvalue.move:12:13
   │
12 │         let s = S { f: 0 };
   │             ^ Unused assignment or binding for local 's'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_s')

error[E01009]: invalid assignment
   ┌─ tests/move_check/translated_ir_tests/move/commands/mixed_lvalue.move:14:19
   │
14 │         (_, _, _, s.f) = four();
   │                   ^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error[E01009]: invalid assignment
   ┌─ tests/move_check/translated_ir_tests/move/commands/mixed_lvalue.move:15:19
   │
15 │         (_, _, _, *r_ref) = four();
   │                   ^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

